se agregaron imagenes y enlaces con boton

--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/left-sidebar.html
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/left-sidebar.html
@@ -46,7 +46,7 @@
     <!-- fuegos artificiales -->
     <!-- fuegos artificiales -->
     <!-- fuegos artificiales -->
-    <script type="text/javascript">
+ <!--   <script type="text/javascript">
 
 
 
@@ -198,7 +198,7 @@ launch();
 setInterval('stepthrough()', speed);
 }}
 //]]>
-    </script>
+    </script>-->
     <!-- fuegos artificiales -->
     <!-- fuegos artificiales -->
     <!-- fuegos artificiales -->
