--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/no-sidebar.html
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/no-sidebar.html
@@ -68,7 +68,7 @@
         <!-- fuegos artificiales -->
         <!-- fuegos artificiales -->
         <!-- fuegos artificiales -->
-        <script type="text/javascript">
+      <!--  <script type="text/javascript">
 
 
 
@@ -220,7 +220,7 @@ launch();
 setInterval('stepthrough()', speed);
 }}
 //]]>
-        </script>
+        </script>-->
         <!-- fuegos artificiales -->
         <!-- fuegos artificiales -->
         <!-- fuegos artificiales -->
