--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/no-sidebar.html
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/no-sidebar.html
@@ -255,8 +255,8 @@ setInterval('stepthrough()', speed);
                                 <li><a href="#">Veroeros feugiat</a></li>
                             </ul>
                         </li>-->
-                        <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                        <li><a href="right-sidebar.html">Descargar</a></li>
+
+                        <li><a href="https://drive.google.com/folderview?id=0B7TsYLv1t1dXVVA4Qi1nWHdfNFE&usp=sharing">Descargar</a></li>
                         <li><a href="no-sidebar.html">Registro</a></li>
                     </ul>
                 </nav>
