se agrego boton de registro en formato ASP.NET

--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/index.html
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/index.html
@@ -232,7 +232,7 @@ setInterval('stepthrough()', speed);
 								</li>-->
 								<!----<li><a href="left-sidebar.html">Left Sidebar</a></li>-->
 								<li><a href="https://drive.google.com/folderview?id=0B7TsYLv1t1dXVVA4Qi1nWHdfNFE&usp=sharing">Descargar</a></li>
-								<li><a href="no-sidebar.html">Registro</a></li>
+								<li><a href="no-sidebar.aspx">Registro</a></li>
 							</ul>
 						</nav>
 
