Sele Agrego Funciones al Registro  y al index Principal de la pagina se modifico varios componentes

--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/index.html
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Alegria Enbotellada</title>
+		<title>Alegria Embotellada</title>
         <!--subur jijii-->
         <!--subur jijii-->
         <!--subur jijii-->
@@ -267,7 +267,7 @@ setInterval('stepthrough()', speed);
 
     }else{
 
-        document.write("<b><font face=arial size=7 color=#ffffff>¡Hola " + mensagem + "! Bienvenido a Alegria Enbotellada!<\/font><\/b>");
+        document.write("<b><font face=arial size=7 color=#ffffff>¡Hola " + mensagem + "! Bienvenido a Alegria Embotellada!<\/font><\/b>");
 
     }
 
@@ -298,7 +298,7 @@ setInterval('stepthrough()', speed);
 				<section class="container">
 					<header class="major">
                         <h1><a href="#" id="logo"><img src="images/pic02.png" /></a></h1>
-						<span class="byline">Mauris vulputate dolor sit amet nibh</span>
+						<span class="byline">Aplicación para Escritorio Alegira Embotellada</span>
 					</header>
 					<div class="row no-collapse-1">
 						<section class="4u">
@@ -340,21 +340,19 @@ setInterval('stepthrough()', speed);
 							<div class="8u">
                                 <section>
                                     <header class="major">
-                                        <h2>Donec dictum metus</h2>
-                                        <span class="byline">Mattis wisi maecenas ligula</span>
+                                        <h2>Alegria Embotellada</h2>
+                                        <br />
+                                        Empresa Psycho Pro
                                     </header>
-                                    <ul class="contact">
+                                    <ul >
+                                       
                                         <li>
-                                            <span class="address">Address</span>
-                                            <span>1234 Somewhere Road #4285 <br />Nashville, TN 00000</span>
+                                            <span class="mail"> Correo</span>
+                                            <span><a href="#">Pysco_AlegriaEmbotellada@PyschoPro.tld</a></span>
                                         </li>
                                         <li>
-                                            <span class="mail">Mail</span>
-                                            <span><a href="#">someone@untitled.tld</a></span>
-                                        </li>
-                                        <li>
-                                            <span class="phone">Phone</span>
-                                            <span>(000) 000-0000</span>
+                                            Telefono
+                                            <span>(51)5562586</span>
                                         </li>
                                     </ul>
                                 </section>
