se agrego un enlace

--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/index.html
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/index.html
@@ -286,7 +286,7 @@ setInterval('stepthrough()', speed);
                         </span></header>
 									<!--<a href="#" class="button alt">Sign Up</a>-->
 								</section>
-								<h1>La busqueda a llegado a su fin y esta al alcanze de tus manos. </h1>
+								<h1>La búsqueda ha llegado a su fin y esta al alcance de tus manos. </h1>
 							</div>
 						</div>
 
